fix: avoid scrollbar for autocomplete

--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,7 @@ html, body {
 body {
   display: grid;
   grid-template-rows: auto 1fr;
+  overflow: hidden;
 }
 
 body > main {
